# ICBoost

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  tb_Ignite64.MainForm.resx  tb_Ignite64.csproj  tb_Ignite64.ignite32Layout.resx
icboost/: README.md  pyproject.toml  requirements.txt
icboost/ConfigurationFiles/: IGNITE64_configNW_26.04.28.10.40.01.txt  IGNITE64_configSW_26.04.28.10.40.01.txt  IGNITE64_configSW_26.04.29.12.31.45.txt  IGNITE64_configSW_SMA.txt  Si5340-RevD_ExtSMA-Registers.txt
icboost/docs/: DEBUG_SESSION_PIANO.md  GUIDA_HW_E_MACRO.md  HW_API_REFERENCE.md  INSTALLAZIONE_WINDOWS.md  MAT_PIXEL_MAP_CSHARP_XREF.md  SVILUPPO_CURSOR.md
icboost/examples/: basic_sequence.py  convert_quadrant.py  gui_monitor.py  list_devices.py  recover_bus_and_usb.py
icboost/examples/macros/: README.md  accendi_mat.py  accendi_quad_tutti.py  calib_ftdac_mat.py  ftdac_incrementa_mat.py  isol_canale_misura.py  spegni_mat.py  (+2 more)
icboost/icboost/: __init__.py  api.py  calib_dco.py  config.py  device.py  dll.py  gui_tk.py  macros_library.py
icboost/tests/: test_addressing_and_mapping.py
ignite64py/: README.md  pyproject.toml
ignite64py/ConfigurationFiles/: IGNITE64_configSW_26.04.28.17.04.47.txt  Si5340-RevD_Crystal-Registers_bis.txt
ignite64py/docs/: GUIDA_HW_E_MACRO.md  HW_API_REFERENCE.md  INSTALLAZIONE_WINDOWS.md  SVILUPPO_CURSOR.md
ignite64py/examples/: basic_sequence.py  convert_quadrant.py  gui_monitor.py  hw_smoke_check.py  list_devices.py  popup_probe.py
ignite64py/icboost/: device.py
ignite64py/ignite64py/: api.py  clock.py  config.py  gui_tk.py  macros_library.py
(+33 files in other folders)
