[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icboost"
version = "0.1.0"
description = "ICBoost — Python wrapper for Ignite64 C# hardware DLLs (TCPtoI2C.dll, USBtoI2C32.dll)"
requires-python = ">=3.9"
dependencies = [
  "pillow",
]

[tool.setuptools]
packages = ["icboost"]

[tool.setuptools.package-data]
icboost = ["assets/*.png", "assets/*.jpg", "assets/*.jpeg"]

